# data-science-projects

./: .gitignore  LICENSE  README.md
ada/computer_graphics/: .gitignore  sdl2.gpr
ada/multilanguage_example/: main.adb
experiments/: .gitignore
experiments/ada/: .gitignore
experiments/ada/blackjack/: blackjack.adb  blackjack.ads  main.adb  mc_policy_evaluation_example.adb
experiments/ada/carrental/: NOTICE.txt  car_rental.ads  generic_random_functions.adb
experiments/ada/cartpole/: README.md  cartpole.adb  main.adb
experiments/ada/cliffwalking/: cliff_walking.adb  cliff_walking.ads  main.adb
experiments/ada/computer_graphics/: .gitignore  Makefile  README.md  canvas.adb  canvas.ads  cg.adb  flake.nix
experiments/ada/concurrency/: .gitignore  simple_task.adb
experiments/ada/frozenlake/: .gitignore  eligibility_trace_example.adb  frozen_lake-child.adb  frozen_lake-child.ads  frozen_lake.adb  frozen_lake.ads  main.adb  td_example.adb
experiments/ada/gcd/: .gitignore  gcd.adb
experiments/ada/multilanguage_example/: default.gpr  print.c
experiments/ada/rl-examples/: alire.toml  fhs-shell.nix  (+1 more)
experiments/c/: .gitignore
experiments/c/linewalk/: CMakeLists.txt  flake.nix
experiments/c/linewalk/apps/: main.c
experiments/c/linewalk/include/: line_walk.h  random_action_h.inc
experiments/c/linewalk/include/envs/: linewalk.h
experiments/c/linewalk/src/: line_walk.c  linewalk.c  mctsenv_uniform_random_actions_c.inc  random_action_c.inc
experiments/c/rl/: .gitignore  CMakeLists.txt  flake.nix
experiments/c/rl/apps/: main.c
experiments/c/rl/include/reinforcementlearning/: bool.h  poisson.h
experiments/c/rl/include/reinforcementlearning/algorithms/: array_ops.h  dp.inc  epsilon_policies.h  et.inc  et_config.h  mc.inc  mc_config.h  td.inc  td_config.h  uniform_random_actions_c.inc
experiments/c/rl/include/reinforcementlearning/envs/: ataxx.h  blackjack.h  carrental.h  cartpole.h  frozenlake.h  hex.h  linewalk.h  ttt.h
experiments/c/rl/src/: array_ops.c  ataxx.c  blackjack.c  carrental.c  cartpole.c  epsilon_policies.c  frozenlake.c  hex.c  linewalk.c  poisson.c  ttt.c
experiments/c/rl/tests/: test_example.c
experiments/futhark/: .gitignore  README.md  fact.fut
experiments/jupyterenv/: flake.nix  kernels.nix
experiments/notebooks-haskell/: .gitignore  README.md  flake.nix
experiments/notebooks-tutorials/: .gitignore  IntermediateDeepLearningWithPytorch.ipynb  MachineLearningForTimeSeriesDataInPython.ipynb  MachineLearningWithScikitLearn.ipynb
experiments/simple-ml-notebooks/: README.md  TensorflowExamples.ipynb  flake.nix  shell.nix  xgboost.ipynb
experiments/zig/: .gitignore
haskell/: flake.nix
haskell/NGFS/: NGFS.ipynb  default.nix
haskell/NGFS/statistical-models/: NOTES  statistical-models.cabal
haskell/NGFS/statistical-models/src/Statistics/Regression/: Internal.hs  Linear.hs
haskell/notebooks/: flake.nix
haskell/statistics/: Examples.ipynb  MyFirstHaskellNotebook.ipynb  Regression.ipynb  StatsmodelToHaskell.ipynb  default.nix
haskell/statistics/statistical-models/: LICENSE  build.nix  default.nix  statistical-models.cabal
haskell/statistics/statistical-models/src/Statistics/Regression/: Linear.hs  Logistic.hs
notebooks/python/: ImageProcessing.ipynb  IntermediateDeepLearningWithPytorch.ipynb  MachineLearningWithScikitLearn.ipynb  README.md  ReinforcementLearningWithGymnasium.ipynb  TaxiRouteOptimizationWithReinforcementLearning.ipynb  UnsupervisedLearning.ipynb  example.py  flake.nix
python-notebooks/: Untitled.ipynb  flake.nix  shell.nix
recs-regressions/: .gitignore  CarbonFootprintCoefficients.csv  README.md  RECSRegressions.ipynb  shell.nix
reinforcement-learning-games/: .gitignore
reinforcement-learning-games/ale-hs/: .gitignore  CHANGELOG.md  ale-cpp.patch  ale-hs.cabal  shell.nix
reinforcement-learning-games/alt-zombole-gym-example/: train.nix  train_dqn.py
reinforcement-learning-games/ma-dqn-train-examples/: .gitignore  eval_dqn.py  flake.nix  setup.py  train_dqn.py
reinforcement-learning-games/maze/: README.md
reinforcement-learning-games/mcts/: CHANGELOG.md  LICENSE  mcts.cabal  shell.nix
reinforcement-learning-games/prlp-demo/: .gitignore  CHANGELOG.md  LICENSE  NOTICE.txt  README.md  flake.nix  setup.py
reinforcement-learning-games/process-example/: CHANGELOG.md  LICENSE  README.md  default.nix  flake.nix  process-example.cabal  shellfor.nix
reinforcement-learning-games/zombsole-gym-example/: .gitignore  LICENSE.txt  NOTICE.txt  README.md  eval_dqn.py  flake.nix  play-zombsole.nix  setup.py  train_dqn.py
zig/id3/: README.md  build.zig  build.zig.zon  flake.nix  shell.nix
zig/readmapfile/: README.md  build.zig  flake.nix
(+181 files in other folders)
